Update riakc, move to tiny_pq

--- a/rebar.config
+++ b/rebar.config
@@ -8,5 +8,6 @@
     {mongodb, ".*", {git, "git://github.com/mongodb/mongodb-erlang.git", {tag, "e5e20a0cbd"}}},
     {mysql, ".*", {git, "git://github.com/dizzyd/erlang-mysql-driver.git", {tag, "16cae84b5e"}}},
     {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "855802e0cc"}}},
-    {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client", {tag, "01a2d3770a"}}}
+    {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client", {tag, "1.3.0"}}},
+    {tiny_pq, ".*", {git, "git://github.com/evanmiller/tiny_pq", {tag, "HEAD"}}}
   ]}.
