Use epgsql master to get float arrays in Postgres.

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {deps, [
     {aleppo, ".*", {git, "git://github.com/evanmiller/aleppo.git", {tag, "bef139e4c7"}}},
     {bson, ".*", {git, "git://github.com/mongodb/bson-erlang.git", {tag, "adce0e94ab"}}},
-    {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", {tag, "1.4"}}},
+    {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", "master"}},
     {erlmc, ".*", {git, "git://github.com/bipthelin/erlmc.git", {tag, "HEAD"}}},
     {medici, ".*", {git, "git://github.com/evanmiller/medici.git", {branch, "rebarify"}}},
     {mongodb, ".*", {git, "git://github.com/mongodb/mongodb-erlang.git", {tag, "613f157c66"}}},
