--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
     {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", {tag, "1.4"}}},
     {erlmc, ".*", {git, "git://github.com/bipthelin/erlmc.git", {tag, "HEAD"}}},
     {medici, ".*", {git, "git://github.com/evanmiller/medici.git", {branch, "rebarify"}}},
-    {mongodb, ".*", {git, "git://github.com/mongodb/mongodb-erlang.git", {tag, "613f157c66"}}},
+    {mongodb, ".*", {git, "git://github.com/mongodb/mongodb-erlang.git", {branch, "master"}}},
     {mysql, ".*", {git, "git://github.com/dizzyd/erlang-mysql-driver.git", {tag, "16cae84b5e"}}},
     {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "855802e0cc"}}},
     {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client", {tag, "1.3.0"}}},
