Depend on ddb library

--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,7 @@
 {deps, [
     {aleppo, ".*", {git, "git://github.com/evanmiller/aleppo.git", {tag, "bef139e4c7"}}},
     {bson, ".*", {git, "git://github.com/mongodb/bson-erlang.git", {tag, "adce0e94ab"}}},
+    {ddb, ".*", {git, "https://github.com/Concurix/ddb.git", {tag, "HEAD"}}},
     {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", {tag, "1.4"}}},
     {erlmc, ".*", {git, "git://github.com/bipthelin/erlmc.git", {tag, "HEAD"}}},
     {medici, ".*", {git, "git://github.com/evanmiller/medici.git", {branch, "rebarify"}}},
