redis support for boss_cache

--- a/rebar.config
+++ b/rebar.config
@@ -11,5 +11,6 @@
     {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "855802e0cc"}}},
     {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client", {tag, "1.3.0"}}},
     {tiny_pq, ".*", {git, "git://github.com/evanmiller/tiny_pq", {tag, "HEAD"}}},
-    {uuid, ".*", {git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}}
+    {uuid, ".*", {git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}},
+    {redo, ".*", {git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}}
   ]}.
