ets cache is default

--- a/rebar.config
+++ b/rebar.config
@@ -12,5 +12,6 @@
     {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client", {tag, "1.3.0"}}},
     {tiny_pq, ".*", {git, "git://github.com/evanmiller/tiny_pq", {tag, "HEAD"}}},
     {uuid, ".*", {git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}},
-    {redo, ".*", {git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}}
+    {redo, ".*", {git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
+    {ets_cache, ".*", {git, "git://github.com/cuongth/ets_cache.git", {tag, "9bde6c53b7"}}}
   ]}.
