add terminate/1 for adapters

--- a/rebar.config
+++ b/rebar.config
@@ -13,5 +13,5 @@
     {tiny_pq, ".*", {git, "git://github.com/evanmiller/tiny_pq", {tag, "HEAD"}}},
     {uuid, ".*", {git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}},
     {redo, ".*", {git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
-    {ets_cache, ".*", {git, "git://github.com/cuongth/ets_cache.git", {tag, "9bde6c53b7"}}}
+    {ets_cache, ".*", {git, "git://github.com/cuongth/ets_cache.git", {branch, "boss_branch"}}}
   ]}.
