--- a/rebar.config
+++ b/rebar.config
@@ -1,16 +1,16 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {aleppo, ".*", {git, "git://github.com/evanmiller/aleppo.git", {tag, "bef139e4c7"}}},
+    {aleppo, ".*", {git, "git://github.com/ChicagoBoss/aleppo.git", {tag, "bef139e4c7"}}},
     {bson, ".*", {git, "git://github.com/mongodb/bson-erlang.git", {tag, "6d3cc910ea"}}},
     {ddb, ".*", {git, "git://github.com/Concurix/ddb.git", {tag, "HEAD"}}},
     {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", {tag, "3318bd5d64"}}},
     {erlmc, ".*", {git, "git://github.com/bipthelin/erlmc.git", {tag, "HEAD"}}},
-    {medici, ".*", {git, "git://github.com/evanmiller/medici.git", {branch, "rebarify"}}},
-    {mongodb, ".*", {git, "git://github.com/evanmiller/mongodb-erlang.git",   {tag, "ce9bf77902"}}},
+    {medici, ".*", {git, "git://github.com/ChicagoBoss/medici.git", {branch, "rebarify"}}},
+    {mongodb, ".*", {git, "git://github.com/ChicagoBoss/mongodb-erlang.git",   {tag, "ce9bf77902"}}},
     {mysql, ".*", {git, "git://github.com/dizzyd/erlang-mysql-driver.git", {tag, "16cae84b5e"}}},
     {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", {tag, "1.0.0"}}},
     {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client", {tag, "1.3.0"}}},
-    {tiny_pq, ".*", {git, "git://github.com/evanmiller/tiny_pq", {tag, "HEAD"}}},
+    {tiny_pq, ".*", {git, "git://github.com/ChicagoBoss/tiny_pq", {tag, "HEAD"}}},
     {uuid, ".*", {git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}},
     {redo, ".*", {git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
     {ets_cache, ".*", {git, "git://github.com/cuongth/ets_cache.git", {branch, "boss_branch"}}}
