--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+%-*-Erlang-*-
 {erl_opts, [debug_info]}.
 {deps, [
     {aleppo, ".*", {git, "git://github.com/ChicagoBoss/aleppo.git", {tag, "bef139e4c7"}}},
@@ -15,3 +16,6 @@
     {redo, ".*", {git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
     {ets_cache, ".*", {git, "git://github.com/cuongth/ets_cache.git", {branch, "boss_branch"}}}
   ]}.
+
+{cover_enabled, true}.
+{plugins, [rebar_ct]}.
