--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,10 @@
 %-*-Erlang-*-
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info,
+	    {parse_transform, lager_transform},
+	    {parse_transform, cut},
+	    {parse_transform, do},
+	    {parse_transform, import_as}
+]}.
 {deps, [
     {aleppo, ".*", {git, "git://github.com/ChicagoBoss/aleppo.git", {tag, "bef139e4c7"}}},
     {bson, ".*", {git, "git://github.com/mongodb/bson-erlang.git", {tag, "6d3cc910ea"}}},
@@ -14,7 +19,10 @@
     {tiny_pq, ".*", {git, "git://github.com/ChicagoBoss/tiny_pq", {tag, "HEAD"}}},
     {uuid, ".*", {git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}},
     {redo, ".*", {git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
-    {ets_cache, ".*", {git, "git://github.com/cuongth/ets_cache.git", {branch, "boss_branch"}}}
+    {ets_cache, ".*", {git, "git://github.com/cuongth/ets_cache.git", {branch, "boss_branch"}}},
+	{proper, ".*", {git, "git@github.com:manopapad/proper.git", "HEAD"}},
+        {erlando, ".*", {git, "git@github.com:travelping/erlando.git", "HEAD"}},
+        {lager,         ".*",   {git, "git://github.com/basho/lager.git", {tag, "1.2.2"}}}
   ]}.
 
 {cover_enabled, true}.
