--- a/rebar.config
+++ b/rebar.config
@@ -22,7 +22,7 @@
 	{uuid,		".*",	{git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}},
 	{redo,		".*",	{git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
 	{ets_cache,	".*",	{git, "git://github.com/cuongth/ets_cache.git", {branch, "boss_branch"}}},
-
+        {proper,	".*",	{git, "git://github.com/manopapad/proper.git", "HEAD"}},
 	{erlydtl,       ".*",   {git, "git://github.com/erlydtl/erlydtl.git",       "HEAD"}}
 
 
