More tests for the compiler

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ otp_release:
 script:
   - rebar get-deps
   - rebar compile 
-  - rebar eunit -v skip_deps=true
+  - rebar eunit skip_deps=true
   - mkdir plt
 #  - ./travis-dialyzer.sh
 notifications:
