--- a/build
+++ b/build
@@ -1,5 +1,6 @@
 #!/bin/bash
 
-rebar compile skip_deps=true && \
-rebar eunit skip_deps=true   && \
+rebar compile  skip_deps=true  && \
+rebar eunit skip_deps=true suite=boss_compiler_test -v  && \
 bash dialyzer.sh
+
