change format of dh_date url

--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,7 @@
 	{redo,		".*",	{git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
 	{ets_cache,	".*",	{git, "git://github.com/cuongth/ets_cache.git", {branch, "boss_branch"}}},
         {proper,	".*",	{git, "git://github.com/manopapad/proper.git", "HEAD"}},
-        {dh_date,       ".*",   {git, "git@github.com:zotonic/dh_date.git", "HEAD"}}
+        {dh_date,       ".*",   {git, "git://github.com/zotonic/dh_date.git", "HEAD"}}
 
 
   ]}.
