Use master branch of epgsql/epgsql.
Conflicts:

	rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
 	{aleppo,	".*",	{git, "git://github.com/ChicagoBoss/aleppo.git",		{tag, "bef139e4c7"}}},
 	{bson,		".*",	{git, "git://github.com/mongodb/bson-erlang.git",		{tag, "6d3cc910ea"}}},
 	{ddb,		".*",	{git, "git://github.com/Concurix/ddb.git",			{branch, "master"}}},
-	{epgsql,	".*",	{git, "git://github.com/mabek/epgsql.git",			{tag, "7b6c71e"}}},
+	{epgsql,	".*",	{git, "git://github.com/epgsql/epgsql.git",			{branch, "master"}}},
 	{erlmc,		".*",	{git, "git://github.com/bipthelin/erlmc.git",			{branch, "master"}}},
 	{medici,	".*",	{git, "git://github.com/ChicagoBoss/medici.git", 		{branch, "rebarify"}}},
 	{mongodb,	".*",	{git, "git://github.com/ChicagoBoss/mongodb-erlang.git",	{tag, "ce9bf77902"}}},
