--- a/rebar.config
+++ b/rebar.config
@@ -13,11 +13,11 @@
 	{ddb,		".*",	{git, "git://github.com/Concurix/ddb.git",			{tag, "HEAD"}}},
 	{epgsql,	".*",	{git, "git://github.com/mabrek/epgsql.git",			{tag, "7b6c71e"}}},
 	{erlmc,		".*",	{git, "git://github.com/bipthelin/erlmc.git",			{tag, "HEAD"}}},
-	{medici,	".*",	{git, "git://github.com/ChicagoBoss/medici.git", {branch, "rebarify"}}},
+	{medici,	".*",	{git, "git://github.com/ChicagoBoss/medici.git", 		{branch, "rebarify"}}},
 	{mongodb,	".*",	{git, "git://github.com/ChicagoBoss/mongodb-erlang.git",	{tag, "ce9bf77902"}}},
 	{mysql,		".*",	{git, "git://github.com/dizzyd/erlang-mysql-driver.git",	{tag, "16cae84b5e"}}},
 	{poolboy,	".*",	{git, "git://github.com/devinus/poolboy.git",			{tag, "1.0.0"}}},
-	{riakc,		".*",	{git, "git://github.com/basho/riak-erlang-client",		{tag, "1.3.0"}}},
+	{riakc,		".*",	{git, "git://github.com/ChicagoBoss/riak-erlang-client",	{tag, "1.3.0-boss"}}},
 	{tiny_pq,	".*",	{git, "git://github.com/ChicagoBoss/tiny_pq",			{tag, "HEAD"}}},
 	{uuid,		".*",	{git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}},
 	{redo,		".*",	{git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
