--- a/rebar.config
+++ b/rebar.config
@@ -6,24 +6,24 @@
 	    {parse_transform, import_as}
 ]}.
 {deps, [
-        {lager,         ".*",	{git, "git://github.com/basho/lager.git",			{tag, "2.0.2"}}},
-        {erlando,	".*",	{git, "git://github.com/travelping/erlando.git", "HEAD"}},
+        {lager,         ".*",	{git, "git://github.com/basho/lager.git",			{tag, "2.0.3"}}},
+        {erlando,	".*",	{git, "git://github.com/travelping/erlando.git", 		{branch, "master"}}},
 	{aleppo,	".*",	{git, "git://github.com/ChicagoBoss/aleppo.git",		{tag, "bef139e4c7"}}},
 	{bson,		".*",	{git, "git://github.com/mongodb/bson-erlang.git",		{tag, "6d3cc910ea"}}},
 	{ddb,		".*",	{git, "git://github.com/Concurix/ddb.git",			{tag, "HEAD"}}},
 	{epgsql,	".*",	{git, "git://github.com/mabrek/epgsql.git",			{tag, "7b6c71e"}}},
-	{erlmc,		".*",	{git, "git://github.com/bipthelin/erlmc.git",			{tag, "HEAD"}}},
+	{erlmc,		".*",	{git, "git://github.com/bipthelin/erlmc.git",			{branch, "master"}}},
 	{medici,	".*",	{git, "git://github.com/ChicagoBoss/medici.git", 		{branch, "rebarify"}}},
 	{mongodb,	".*",	{git, "git://github.com/ChicagoBoss/mongodb-erlang.git",	{tag, "ce9bf77902"}}},
 	{mysql,		".*",	{git, "git://github.com/dizzyd/erlang-mysql-driver.git",	{tag, "16cae84b5e"}}},
-	{poolboy,	".*",	{git, "git://github.com/devinus/poolboy.git",			{tag, "1.0.0"}}},
+	{poolboy,	".*",	{git, "git://github.com/devinus/poolboy.git",			{tag, "1.0.1"}}},
 	{riakc,		".*",	{git, "git://github.com/ChicagoBoss/riak-erlang-client",	{tag, "1.3.0-boss"}}},
-	{tiny_pq,	".*",	{git, "git://github.com/ChicagoBoss/tiny_pq",			{tag, "HEAD"}}},
-	{uuid,		".*",	{git, "git://gitorious.org/avtobiff/erlang-uuid.git", "master"}},
-	{redo,		".*",	{git, "git://github.com/JacobVorreuter/redo.git",    "HEAD"}},
-	{ets_cache,	".*",	{git, "git://github.com/cuongth/ets_cache.git", {branch, "boss_branch"}}},
-        {proper,	".*",	{git, "git://github.com/manopapad/proper.git", "HEAD"}},
-        {dh_date,       ".*",   {git, "git://github.com/zotonic/dh_date.git", "HEAD"}}
+	{tiny_pq,	".*",	{git, "git://github.com/ChicagoBoss/tiny_pq",			{tag, "v0.8.9"}}},
+	{uuid,		".*",	{git, "git://gitorious.org/avtobiff/erlang-uuid.git", 		{branch, "master"}}},
+	{redo,		".*",	{git, "git://github.com/JacobVorreuter/redo.git",   		{branch, "master"}}},
+	{ets_cache,	".*",	{git, "git://github.com/cuongth/ets_cache.git", 		{branch, "boss_branch"}}},
+        {proper,	".*",	{git, "git://github.com/manopapad/proper.git", 			{branch, "master"}}},
+        {dh_date,       ".*",   {git, "git://github.com/zotonic/dh_date.git",			{branch, "master"}}}
 
 
   ]}.
