Use specific poolboy commit that fixes OTP17
Deprecated type warning

--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,7 @@
 	{medici,	".*",	{git, "git://github.com/ChicagoBoss/medici.git", 		{branch, "rebarify"}}},
 	{mongodb,	".*",	{git, "git://github.com/ChicagoBoss/mongodb-erlang.git",	{tag, "ce9bf77902"}}},
 	{mysql,		".*",	{git, "git://github.com/dizzyd/erlang-mysql-driver.git",	{tag, "16cae84b5e"}}},
-	{poolboy,	".*",	{git, "git://github.com/devinus/poolboy.git",			{tag, "1.0.1"}}},
+	{poolboy,	".*",	{git, "git://github.com/devinus/poolboy.git",			{tag, "64e1eaef0b"}}},
 	{riakc,		".*",	{git, "git://github.com/ChicagoBoss/riak-erlang-client",	{tag, "1.3.0-boss"}}},
 	{tiny_pq,	".*",	{git, "git://github.com/ChicagoBoss/tiny_pq",			{tag, "v0.8.9"}}},
 	{uuid,		".*",	{git, "git://gitorious.org/avtobiff/erlang-uuid.git", 		{branch, "master"}}},
