Make ddb use a temporary repo for OTP17

--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,9 @@
         {erlando,	".*",	{git, "git://github.com/travelping/erlando.git", 		{branch, "master"}}},
 	{aleppo,	".*",	{git, "git://github.com/ChicagoBoss/aleppo.git",		{tag, "bef139e4c7"}}},
 	{bson,		".*",	{git, "git://github.com/mongodb/bson-erlang.git",		{tag, "6d3cc910ea"}}},
-	{ddb,		".*",	{git, "git://github.com/Concurix/ddb.git",			{tag, "HEAD"}}},
+	%{ddb,		".*",	{git, "git://github.com/Concurix/ddb.git",			{tag, "HEAD"}}},
+	%% Temporary for OTP 17 until pull request is merged
+	{ddb,		".*",	{git, "git://github.com/choptastic/ddb.git",			{branch, "patch-1"}}},
 	{epgsql,	".*",	{git, "git://github.com/mabrek/epgsql.git",			{tag, "7b6c71e"}}},
 	{erlmc,		".*",	{git, "git://github.com/bipthelin/erlmc.git",			{branch, "master"}}},
 	{medici,	".*",	{git, "git://github.com/ChicagoBoss/medici.git", 		{branch, "rebarify"}}},
