--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
 %-*-Erlang-*-
+% vim: ts=8 sw=8 ft=erlang
+
 {erl_opts, [debug_info,
 	    {parse_transform, lager_transform},
 	    {parse_transform, cut},
@@ -6,8 +8,8 @@
 	    {parse_transform, import_as}
 ]}.
 {deps, [
-        {lager,         ".*",	{git, "git://github.com/basho/lager.git",			{tag, "2.0.3"}}},
-        {erlando,	".*",	{git, "git://github.com/travelping/erlando.git", 		{branch, "master"}}},
+	{lager,		".*",	{git, "git://github.com/basho/lager.git",			{tag, "2.0.3"}}},
+	{erlando,	".*",	{git, "git://github.com/travelping/erlando.git", 		{branch, "master"}}},
 	{aleppo,	".*",	{git, "git://github.com/ChicagoBoss/aleppo.git",		{tag, "bef139e4c7"}}},
 	{bson,		".*",	{git, "git://github.com/mongodb/bson-erlang.git",		{tag, "6d3cc910ea"}}},
 	{ddb,		".*",	{git, "git://github.com/Concurix/ddb.git",			{branch, "master"}}},
@@ -22,10 +24,8 @@
 	{uuid,		".*",	{git, "git://gitorious.org/avtobiff/erlang-uuid.git", 		{branch, "master"}}},
 	{redo,		".*",	{git, "git://github.com/JacobVorreuter/redo.git",   		{branch, "master"}}},
 	{ets_cache,	".*",	{git, "git://github.com/cuongth/ets_cache.git", 		{branch, "boss_branch"}}},
-        {proper,	".*",	{git, "git://github.com/manopapad/proper.git", 			{branch, "master"}}},
-        {dh_date,       ".*",   {git, "git://github.com/zotonic/dh_date.git",			{branch, "master"}}}
-
-
+	{proper,	".*",	{git, "git://github.com/manopapad/proper.git", 			{branch, "master"}}},
+	{dh_date,	".*",	{git, "git://github.com/zotonic/dh_date.git",			{branch, "master"}}}
   ]}.
 
 {cover_enabled, true}.
