Add missing .git in rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -19,8 +19,8 @@
 	{mongodb,	".*",	{git, "git://github.com/ChicagoBoss/mongodb-erlang.git",	{tag, "ce9bf77902"}}},
 	{mysql,		".*",	{git, "git://github.com/dizzyd/erlang-mysql-driver.git",	{tag, "16cae84b5e"}}},
 	{poolboy,	".*",	{git, "git://github.com/devinus/poolboy.git",			{tag, "64e1eaef0b"}}},
-	{riakc,		".*",	{git, "git://github.com/ChicagoBoss/riak-erlang-client",	{tag, "1.3.0-boss"}}},
-	{tiny_pq,	".*",	{git, "git://github.com/ChicagoBoss/tiny_pq",			{tag, "v0.8.9"}}},
+	{riakc,		".*",	{git, "git://github.com/ChicagoBoss/riak-erlang-client.git",	{tag, "1.3.0-boss"}}},
+	{tiny_pq,	".*",	{git, "git://github.com/ChicagoBoss/tiny_pq.git",		{tag, "v0.8.9"}}},
 	{uuid,		".*",	{git, "git://gitorious.org/avtobiff/erlang-uuid.git", 		{branch, "master"}}},
 	{redo,		".*",	{git, "git://github.com/JacobVorreuter/redo.git",   		{branch, "master"}}},
 	{ets_cache,	".*",	{git, "git://github.com/cuongth/ets_cache.git", 		{branch, "boss_branch"}}},
