--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
 ]}.
 {deps, [
         {lager,         ".*",   {git, "git://github.com/basho/lager.git",                       {tag, "2.0.3"}}},
-        {erlando,       ".*",   {git, "git://github.com/travelping/erlando.git",                {tag, "23d678c97"}}},
+        {erlando,       ".*",   {git, "git://github.com/ChicagoBoss/erlando.git",               {tag, "b0b77dd9b9"}}},
         {aleppo,        ".*",   {git, "git://github.com/ChicagoBoss/aleppo.git",                {tag, "bef139e4c7"}}},
         {ddb,           ".*",   {git, "git://github.com/Concurix/ddb.git",                      {tag, "acad8af654"}}},
         {epgsql,        ".*",   {git, "git://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
