--- a/rebar.test.config
+++ b/rebar.test.config
@@ -6,10 +6,10 @@
             {parse_transform, cut},
             {parse_transform, do},
             {parse_transform, import_as},
-	    {d, boss_test}
+            {d, boss_test}
 ]}.
 {deps, [
-	{boss_test,	".*", 	{git, "git://github.com/ChicagoBoss/boss_test.git",		{branch, master}}},
+        {boss_test,     ".*",   {git, "git://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}},
         {lager,         ".*",   {git, "git://github.com/basho/lager.git",                       {tag, "2.0.3"}}},
         {erlando,       ".*",   {git, "git://github.com/ChicagoBoss/erlando.git",               {tag, "b0b77dd9b9"}}},
         {aleppo,        ".*",   {git, "git://github.com/ChicagoBoss/aleppo.git",                {tag, "bef139e4c7"}}},
