--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,6 @@
             {parse_transform, import_as}
 ]}.
 {deps, [
-        {boss_test,     ".*",   {git, "git://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}},
         {lager,         ".*",   {git, "git://github.com/basho/lager.git",                       {tag, "2.0.3"}}},
         {erlando,       ".*",   {git, "git://github.com/ChicagoBoss/erlando.git",               {tag, "b0b77dd9b9"}}},
         {aleppo,        ".*",   {git, "git://github.com/ChicagoBoss/aleppo.git",                {tag, "bef139e4c7"}}},
@@ -26,7 +25,8 @@
                                                                                                 % boss_branch for ets_cache
         {ets_cache,     ".*",   {git, "git://github.com/cuongth/ets_cache.git",                 {tag, "c7a17204cd"}}},
         {proper,        ".*",   {git, "git://github.com/manopapad/proper.git",                  {tag, "d90fc40579"}}},
-        {dh_date,       ".*",   {git, "git://github.com/zotonic/dh_date.git",                   {tag, "473ad8c473"}}}
+        {dh_date,       ".*",   {git, "git://github.com/zotonic/dh_date.git",                   {tag, "473ad8c473"}}},
+        {boss_test,     ".*",   {git, "git://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
   ]}.
 
 {cover_enabled, true}.
