--- a/rebar.config
+++ b/rebar.config
@@ -10,10 +10,10 @@
 {deps, [
         {lager,         ".*",   {git, "git://github.com/basho/lager.git",                       {tag, "2.1.0"}}},
         {erlando,       ".*",   {git, "git://github.com/ChicagoBoss/erlando.git",               {tag, "b0b77dd9b9"}}},
-        {aleppo,        ".*",   {git, "git://github.com/ChicagoBoss/aleppo.git",                {tag, "v0.8.14"}}},
-        {medici,        ".*",   {git, "git://github.com/ChicagoBoss/medici.git",                {tag, "bb6167459d"}}},
-        {mongodb,       ".*",   {git, "git://github.com/ChicagoBoss/mongodb-erlang.git",        {tag, "ce9bf77902"}}},
-        {riakc,         ".*",   {git, "git://github.com/ChicagoBoss/riak-erlang-client.git",    {tag, "1.3.0-boss"}}},
+        {aleppo,        ".*",   {git, "git://github.com/ErlyORM/aleppo.git",                {tag, "v0.8.14"}}},
+        {medici,        ".*",   {git, "git://github.com/ErlyORM/medici.git",                {tag, "bb6167459d"}}},
+        {mongodb,       ".*",   {git, "git://github.com/ErlyORM/mongodb-erlang.git",        {tag, "ce9bf77902"}}},
+        {riakc,         ".*",   {git, "git://github.com/ErlyORM/riak-erlang-client.git",    {tag, "1.3.0-boss"}}},
         {ddb,           ".*",   {git, "git://github.com/Concurix/ddb.git",                      {tag, "acad8af654"}}},
         {epgsql,        ".*",   {git, "git://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
         {erlmc,         ".*",   {git, "git://github.com/bipthelin/erlmc.git",                   {tag, "3062f8deb7"}}},
