fault tolerant caching for boss_db

--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,7 @@
         {riakc,         ".*",   {git, "git://github.com/ErlyORM/riak-erlang-client.git",    {tag, "1.3.0-boss"}}},
         {ddb,           ".*",   {git, "git://github.com/Concurix/ddb.git",                      {tag, "acad8af654"}}},
         {epgsql,        ".*",   {git, "git://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
-        {erlmc,         ".*",   {git, "git://github.com/bipthelin/erlmc.git",                   {tag, "3062f8deb7"}}},
+        {erlmc,         ".*",   {git, "git://github.com/youngmonk/erlmc.git",                   {branch, "extend"}}},
         {mysql,         ".*",   {git, "git://github.com/dizzyd/erlang-mysql-driver.git",        {tag, "16cae84b5e"}}},
         {poolboy,       ".*",   {git, "git://github.com/devinus/poolboy.git",                   {tag, "64e1eaef0b"}}},
         {uuid,          ".*",   {git, "git://github.com/avtobiff/erlang-uuid.git",              {tag, "9cfe9666f1"}}},
@@ -31,4 +31,3 @@
 
 {cover_enabled, true}.
 {plugins, [rebar_ct]}.
-
