--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
         {erlando,       ".*",   {git, "git://github.com/ChicagoBoss/erlando.git",               {tag, "b0b77dd9b9"}}},
         {aleppo,        ".*",   {git, "git://github.com/ErlyORM/aleppo.git",                {tag, "v0.8.14"}}},
         {medici,        ".*",   {git, "git://github.com/ErlyORM/medici.git",                {tag, "bb6167459d"}}},
-        {mongodb,       ".*",   {git, "git://github.com/comtihon/mongodb-erlang.git",        {tag, "v0.5"}}},
+        {mongodb,       ".*",   {git, "git://github.com/youngmonk/mongodb-erlang.git",        {branch , "fork"}}},
         {riakc,         ".*",   {git, "git://github.com/ErlyORM/riak-erlang-client.git",    {tag, "1.3.0-boss"}}},
         {ddb,           ".*",   {git, "git://github.com/Concurix/ddb.git",                      {tag, "acad8af654"}}},
         {epgsql,        ".*",   {git, "git://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
