--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: erlang
+sudo: false
 otp_release:
+# Test on all supported releases
+   - 18.0
+   - 17.5
+   - 17.4
+   - 17.3
    - 17.1
    - 17.0
    - R16B03-1
@@ -7,10 +13,8 @@ otp_release:
    - R16B01
 
 script:
-  - rebar get-deps
-  - rebar compile 
-  - rebar eunit skip_deps=true
-  - mkdir plt
-  - ./travis-dialyzer.sh
+  - make
+  - make plt
+  - make dialyze
 notifications:
   email: false
