--- a/rebar.config
+++ b/rebar.config
@@ -13,9 +13,21 @@
         {aleppo,        ".*",   {git, "git://github.com/ErlyORM/aleppo.git",                    {tag, "v0.8.15"}}},
         {medici,        ".*",   {git, "git://github.com/ErlyORM/medici.git",                    {tag, "bb6167459d"}}},
 
-        {bson,          ".*",   {git, "git://github.com/comtihon/bson-erlang",                  {branch, "legacy"}}},
-        {mongodb,       ".*",   {git, "git://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.2"}}},
-        {riakc,         ".*",   {git, "git://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
+        % Different version of mongodb driver and bson breaking compilation
+        % on different Erlang version. So disabling them by default. Uncomment one
+        % of options below, if you need mongodb driver
+        % for Erlang < 17
+        %{mongodb,       ".*",   {git, "git://github.com/ErlyORM/mongodb-erlang.git",            {tag, "ce9bf77902"}}},
+        % for Erlang = 17
+        %{bson,          ".*",   {git, "git://github.com/comtihon/bson-erlang",                  {branch, "legacy"}}},
+        %{mongodb,       ".*",   {git, "git://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.2"}}},
+        % for Erlang >= 18
+        %{mongodb,       ".*",   {git, "git://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.2"}}},
+
+        % riak_pb not compatible with Erlang 18, so commented for now
+        % uncomment line below if you need Riak support and have Erlang < 18
+        %{riakc,         ".*",   {git, "git://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
+
         {ddb,           ".*",   {git, "git://github.com/Concurix/ddb.git",                      {tag, "acad8af654"}}},
         {epgsql,        ".*",   {git, "git://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
         {erlmc,         ".*",   {git, "git://github.com/bipthelin/erlmc.git",                   {tag, "3062f8deb7"}}},
