--- a/rebar.config
+++ b/rebar.config
@@ -28,7 +28,7 @@
         % uncomment line below if you need Riak support and have Erlang < 18
         %{riakc,         ".*",   {git, "git://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
 
-        {ddb,           ".*",   {git, "git://github.com/ErlyORM/ddb.git",                      {tag, "acad8af654"}}},
+        {ddb,           ".*",   {git, "git://github.com/ErlyORM/ddb.git",                      {tag, "v0.1.0"}}},
         {epgsql,        ".*",   {git, "git://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
         {erlmc,         ".*",   {git, "git://github.com/bipthelin/erlmc.git",                   {tag, "3062f8deb7"}}},
         {mysql,         ".*",   {git, "git://github.com/dizzyd/erlang-mysql-driver.git",        {tag, "16cae84b5e"}}},
