--- a/rebar.config
+++ b/rebar.config
@@ -28,11 +28,11 @@
         % uncomment line below if you need Riak support and have Erlang < 18
         %{riakc,         ".*",   {git, "git://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
 
-        {ddb,           ".*",   {git, "git://github.com/ErlyORM/ddb.git",                      {tag, "v0.1.0"}}},
+        {ddb,           ".*",   {git, "git://github.com/ErlyORM/ddb.git",                      {tag, "v0.1.1"}}},
         {epgsql,        ".*",   {git, "git://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
         {erlmc,         ".*",   {git, "git://github.com/bipthelin/erlmc.git",                   {tag, "3062f8deb7"}}},
         {mysql,         ".*",   {git, "git://github.com/dizzyd/erlang-mysql-driver.git",        {tag, "16cae84b5e"}}},
-        {poolboy,       ".*",   {git, "git://github.com/devinus/poolboy.git",                   {tag, "64e1eaef0b"}}},
+        {poolboy,       ".*",   {git, "git://github.com/devinus/poolboy.git",                   {tag, "1.5.1"}}},
         {uuid,          ".*",   {git, "git://github.com/avtobiff/erlang-uuid.git",              {tag, "9cfe9666f1"}}},
         {redo,          ".*",   {git, "git://github.com/JacobVorreuter/redo.git",               {tag, "7c7eaef4cd"}}},
                                                                                                 % boss_branch for ets_cache
