--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ otp_release:
 
 script:
   - make
-  - rebar eunit -v skip_deps=true
+#  - rebar eunit -v skip_deps=true
   - make plt
   - make dialyze
 notifications:
