--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
 {deps, [
         {lager,         ".*",   {git, "git://github.com/basho/lager.git",                       {tag, "2.1.0"}}},
         {erlando,       ".*",   {git, "git://github.com/ChicagoBoss/erlando.git",               {tag, "b0b77dd9b9"}}},
-        {aleppo,        ".*",   {git, "git://github.com/ErlyORM/aleppo.git",                    {tag, "v0.8.15"}}},
+        {aleppo,        ".*",   {git, "git://github.com/ErlyORM/aleppo.git",                    {tag, "ee1056f740"}}},
         {medici,        ".*",   {git, "git://github.com/ErlyORM/medici.git",                    {tag, "bb6167459d"}}},
 
         % Different version of mongodb driver and bson breaking compilation
