--- a/rebar.config
+++ b/rebar.config
@@ -28,11 +28,11 @@
 
         {ddb,           ".*",   {git, "https://github.com/ErlyORM/ddb.git",                       {tag, "v0.1.3"}}},
         {epgsql,        ".*",   {git, "https://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
-        {erlmc,         ".*",   {git, "https://github.com/bipthelin/erlmc.git",                   {tag, "3062f8deb7"}}},
-        {mysql,         ".*",   {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",        {tag, "v0.0.1"}}},
+        {erlmc,         ".*",   {git, "https://github.com/layerhq/erlmc.git",                     {tag, "1c17552"}}},
+        {mysql,         ".*",   {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.1"}}},
         {poolboy,       ".*",   {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.1"}}},
         {uuid,          ".*",   {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "9cfe9666f1"}}},
-        {redo,          ".*",   {git, "https://github.com/JacobVorreuter/redo.git",               {tag, "7c7eaef4cd"}}},
+        {redo,          ".*",   {git, "https://github.com/heroku/redo.git",                       {tag, "936a3c5"}}},
                                                                                                 % boss_branch for ets_cache
         {ets_cache,     ".*",   {git, "https://github.com/cuongth/ets_cache.git",                 {tag, "c7a17204cd"}}},
         {proper,        ".*",   {git, "https://github.com/manopapad/proper.git",                  {tag, "c8c73ee23b"}}},
