--- a/rebar.config
+++ b/rebar.config
@@ -31,7 +31,7 @@
         {erlmc,         ".*",   {git, "https://github.com/layerhq/erlmc.git",                     {tag, "1c17552"}}},
         {mysql,         ".*",   {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.1"}}},
         {poolboy,       ".*",   {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.1"}}},
-        {uuid,          ".*",   {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "9cfe9666f1"}}},
+        {uuid,          ".*",   {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.0"}}},
         {redo,          ".*",   {git, "https://github.com/heroku/redo.git",                       {tag, "936a3c5"}}},
                                                                                                 % boss_branch for ets_cache
         {ets_cache,     ".*",   {git, "https://github.com/cuongth/ets_cache.git",                 {tag, "c7a17204cd"}}},
