--- a/rebar.config
+++ b/rebar.config
@@ -1,26 +1,25 @@
 %-*-Erlang-*-
 % vim: ts=8 sw=8 ft=erlang
 
-{erl_opts, [debug_info,
+{erl_opts, [
+            debug_info,
+            warn_unused_vars,
+            warn_unused_import,
+            warn_exported_vars,
             {parse_transform, lager_transform},
             {parse_transform, cut},
             {parse_transform, do},
             {parse_transform, import_as}
 ]}.
 {deps, [
-        {lager,         ".*",   {git, "https://github.com/basho/lager.git",                       {tag, "2.1.0"}}},
+        {lager,         ".*",   {git, "https://github.com/basho/lager.git",                       {tag, "2.2.0"}}},
         {erlando,       ".*",   {git, "https://github.com/ChicagoBoss/erlando.git",               {tag, "b0b77dd9b9"}}},
-        {aleppo,        ".*",   {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "ee1056f740"}}},
+        {aleppo,        ".*",   {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9"}}},
         {medici,        ".*",   {git, "https://github.com/ErlyORM/medici.git",                    {tag, "bb6167459d"}}},
 
-        % Different version of mongodb driver and bson breaking compilation
-        % on different Erlang version. So disabling them by default. Uncomment one
-        % of options below, if you need mongodb driver
-        % for Erlang = 17
+        % for Erlang 17 uncomment line below (using legacy branch of bson)
         %{bson,          ".*",   {git, "https://github.com/comtihon/bson-erlang",                  {branch, "legacy"}}},
-        %{mongodb,       ".*",   {git, "https://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.9"}}},
-        % for Erlang >= 18
-        %{mongodb,       ".*",   {git, "https://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.9"}}},
+        {mongodb,       ".*",   {git, "https://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.9"}}},
 
         % riak_pb not compatible with Erlang 18, so commented for now
         % uncomment line below if you need Riak support and have Erlang < 18
