Refactor Makefile to use rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -44,12 +44,20 @@
 
 {plugins, [rebar3_proper]}.
 
+{dialyzer, [
+    {warnings, [error_handling, race_conditions, unmatched_returns, underspecs]},
+    {get_warnings, true}
+]}.
+
 {profiles,
     [{test, [
          {erl_opts, [debug_info]}
         ,{deps, [
             {proper, "1.1.1-beta"}
         ]}
+    ]},
+    {boss_test, [
+         {erl_opts, [{d, boss_test}]}
     ]},
     {prod, [
         {erl_opts, [no_debug_info, warnings_as_errors]}
