--- a/rebar.config
+++ b/rebar.config
@@ -25,7 +25,7 @@
         % uncomment line below if you need Riak support and have Erlang < 18
         %{riakc,         ".*",   {git, "https://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
 
-        {ddb,           ".*",   {git, "https://github.com/ErlyORM/ddb.git",                       {tag, "v0.1.3"}}},
+        {ddb,           ".*",   {git, "https://github.com/ErlyORM/ddb.git",                       {tag, "ca2c520"}}},
         {epgsql,        ".*",   {git, "https://github.com/epgsql/epgsql.git",                     {tag, "c7dfb064811"}}},
         {erlmc,         ".*",   {git, "https://github.com/layerhq/erlmc.git",                     {tag, "1c17552"}}},
         {mysql,         ".*",   {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.1"}}},
