--- a/rebar.config
+++ b/rebar.config
@@ -12,32 +12,32 @@
             {parse_transform, import_as}
 ]}.
 {deps, [
-        {lager,         ".*",   {git, "https://github.com/basho/lager.git",                       {tag, "2.2.3"}}},
-        {erlando,       ".*",   {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "b0b77dd9b9"}}},
-        {aleppo,        ".*",   {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.1"}}},
-        {medici,        ".*",   {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
+        {lager,         {git, "https://github.com/basho/lager.git",                       {tag, "2.2.3"}}},
+        {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "b0b77dd9b9"}}},
+        {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.1"}}},
+        {medici,        {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
 
         % for Erlang 17 uncomment line below (using legacy branch of bson)
-        %{bson,          ".*",   {git, "https://github.com/comtihon/bson-erlang",                  {branch, "legacy"}}},
-        %{mongodb,       ".*",   {git, "https://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.9"}}},
+        %{bson,          {git, "https://github.com/comtihon/bson-erlang",                  {branch, "legacy"}}},
+        %{mongodb,       {git, "https://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.9"}}},
 
         % riak_pb not compatible with Erlang 18, so commented for now
         % uncomment line below if you need Riak support and have Erlang < 18
-        %{riakc,         ".*",   {git, "https://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
+        %{riakc,         {git, "https://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
 
-        {ddb,           ".*",   {git, "https://github.com/ErlyORM/ddb.git",                       {ref, "0b73869"}}},
-        {epgsql,        ".*",   {git, "https://github.com/epgsql/epgsql.git",                     {ref, "c7dfb064811"}}},
-        {erlmc,         ".*",   {git, "https://github.com/layerhq/erlmc.git",                     {ref, "abc972b"}}},
-        {mysql,         ".*",   {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.1"}}},
-        {poolboy,       ".*",   {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.1"}}},
-        {uuid,          ".*",   {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.0"}}},
-        {redo,          ".*",   {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
+        {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {ref, "0b73869"}}},
+        {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {ref, "c7dfb064811"}}},
+        {erlmc,         {git, "https://github.com/layerhq/erlmc.git",                     {ref, "abc972b"}}},
+        {mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.1"}}},
+        {poolboy,       {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.1"}}},
+        {uuid,          {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.0"}}},
+        {redo,          {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
                                                                                                 % boss_branch for ets_cache
-        {ets_cache,     ".*",   {git, "https://github.com/cuongth/ets_cache.git",                 {ref, "c7a17204cd"}}},
-        {proper,        ".*",   {git, "https://github.com/manopapad/proper.git",                  {tag, "v1.2"}}},
-        {dh_date,       ".*",   {git, "https://github.com/daleharvey/dh_date.git",                {ref, "23e5a61"}}},
-        {tiny_pq,       ".*",   {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.8.15"}}},
-        {boss_test,     ".*",   {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
+        {ets_cache,     {git, "https://github.com/cuongth/ets_cache.git",                 {ref, "c7a17204cd"}}},
+        {proper,        {git, "https://github.com/manopapad/proper.git",                  {tag, "v1.2"}}},
+        {dh_date,       {git, "https://github.com/daleharvey/dh_date.git",                {ref, "23e5a61"}}},
+        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.8.15"}}},
+        {boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
   ]}.
 
 %% == Dialyzer ==
