don't fail on warnings

--- a/rebar.config
+++ b/rebar.config
@@ -11,6 +11,7 @@
             {parse_transform, do},
             {parse_transform, import_as}
 ]}.
+
 {deps, [
         {lager,         {git, "https://github.com/basho/lager.git",                       {tag, "2.2.3"}}},
         {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "b0b77dd9b9"}}},
@@ -54,6 +55,7 @@
 ]}.
 
 {cover_enabled, true}.
+
 {plugins, [rebar3_hex, rebar3_proper]}.
 
 {profiles,
@@ -66,6 +68,6 @@
          {erl_opts, [{d, boss_test}]}
     ]},
     {prod, [
-        {erl_opts, [warnings_as_errors]}
+        %{erl_opts, [warnings_as_errors]}
     ]}
 ]}.
