--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
 ]}.
 
 {deps, [
-        {lager,         {git, "https://github.com/basho/lager.git",                       {tag, "2.2.3"}}},
+        {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.4.1"}}},
         {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "b0b77dd9b9"}}},
         {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.1"}}},
         {medici,        {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
