--- a/rebar.config
+++ b/rebar.config
@@ -61,7 +61,7 @@
 {profiles,
     [{test, [
         {deps, [
-            {proper, "1.1.1-beta"}
+            {proper, "1.2"}
         ]}
     ]},
     {boss_test, [
