re-enable eunit tests

--- a/rebar.config
+++ b/rebar.config
@@ -61,7 +61,7 @@
 {profiles,
     [{test, [
         {deps, [
-            {proper, "1.2"}
+            {proper, {git, "https://github.com/manopapad/proper.git",                  {tag, "v1.2"}}}
         ]}
     ]},
     {boss_test, [
