--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - make rebar_src
 script:
   - make
-#  - rebar eunit -v skip_deps=true
+  - ./rebar3 eunit -v
   - make dialyze
 notifications:
   email: false
