--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,8 @@
             {parse_transform, lager_transform},
             {parse_transform, cut},
             {parse_transform, do},
-            {parse_transform, import_as}
+            {parse_transform, import_as},
+            {parse_transform, vararg}
 ]}.
 
 {deps, [
@@ -35,10 +36,10 @@
         {redo,          {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
                                                                                                 % boss_branch for ets_cache
         {ets_cache,     {git, "https://github.com/cuongth/ets_cache.git",                 {ref, "c7a17204cd"}}},
-        {proper,        {git, "https://github.com/manopapad/proper.git",                  {tag, "a112a2d"}}},
+        %{proper,        {git, "https://github.com/manopapad/proper.git",                  {tag, "a112a2d"}}},
         {dh_date,       {git, "https://github.com/daleharvey/dh_date.git",                {ref, "23e5a61"}}},
         {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.8.16"}}},
-        {boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
+        %{boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
   ]}.
 
 %% == Dialyzer ==
@@ -61,7 +62,8 @@
 {profiles,
     [{test, [
         {deps, [
-            {proper, {git, "https://github.com/manopapad/proper.git",                  {tag, "v1.2"}}}
+            {proper,        {git, "https://github.com/manopapad/proper.git",                  {tag, "a112a2d"}}},
+            {boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
         ]}
     ]},
     {boss_test, [
