--- a/rebar.config
+++ b/rebar.config
@@ -38,7 +38,7 @@
         {ets_cache,     {git, "https://github.com/cuongth/ets_cache.git",                 {ref, "c7a17204cd"}}},
         %{proper,        {git, "https://github.com/manopapad/proper.git",                  {tag, "a112a2d"}}},
         {dh_date,       {git, "https://github.com/daleharvey/dh_date.git",                {ref, "23e5a61"}}},
-        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.8.16"}}},
+        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.8.16"}}}
         %{boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
   ]}.
 
