--- a/rebar.config
+++ b/rebar.config
@@ -9,8 +9,7 @@
             {parse_transform, lager_transform},
             {parse_transform, cut},
             {parse_transform, do},
-            {parse_transform, import_as},
-            {parse_transform, vararg}
+            {parse_transform, import_as}
 ]}.
 
 {deps, [
@@ -57,7 +56,7 @@
 
 {cover_enabled, true}.
 
-{plugins, [rebar3_hex, rebar3_proper]}.
+{plugins, []}.
 
 {profiles,
     [{test, [
