--- a/rebar.config
+++ b/rebar.config
@@ -13,9 +13,9 @@
 ]}.
 
 {deps, [
-        {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.4.1"}}},
+        {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.5.1"}}},
         {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "b0b77dd9b9"}}},
-        {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.1"}}},
+        {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.2"}}},
         {medici,        {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
 
         % for Erlang 17 uncomment line below (using legacy branch of bson)
@@ -35,10 +35,10 @@
         {redo,          {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
                                                                                                 % boss_branch for ets_cache
         {ets_cache,     {git, "https://github.com/cuongth/ets_cache.git",                 {ref, "c7a17204cd"}}},
-        {proper,        {git, "https://github.com/manopapad/proper.git",                  {tag, "v1.2"}}},
+        %{proper,        {git, "https://github.com/manopapad/proper.git",                  {ref, "a112a2d"}}},
         {dh_date,       {git, "https://github.com/daleharvey/dh_date.git",                {ref, "23e5a61"}}},
-        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.8.15"}}},
-        {boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
+        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.8.16"}}}
+        %{boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
   ]}.
 
 %% == Dialyzer ==
@@ -56,12 +56,13 @@
 
 {cover_enabled, true}.
 
-{plugins, [rebar3_hex, rebar3_proper]}.
+{plugins, []}.
 
 {profiles,
     [{test, [
         {deps, [
-            {proper, {git, "https://github.com/manopapad/proper.git",                  {tag, "v1.2"}}}
+            {proper,        {git, "https://github.com/manopapad/proper.git",                  {ref, "a112a2d"}}},
+            {boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
         ]}
     ]},
     {boss_test, [
