--- a/rebar.config
+++ b/rebar.config
@@ -26,7 +26,7 @@
         % uncomment line below if you need Riak support and have Erlang < 18
         %{riakc,         {git, "https://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
 
-        {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {ref, "v0.1.5"}}},
+        {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {ref, "2941b5f"}}},
         {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {ref, "c7dfb064811"}}},
         {erlmc,         {git, "https://github.com/layerhq/erlmc.git",                     {ref, "c5280da"}}},
         {mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.1"}}},
