--- a/rebar.config
+++ b/rebar.config
@@ -13,9 +13,9 @@
 ]}.
 
 {deps, [
-        {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.5.1"}}},
+        {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.6.1"}}},
         {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "b0b77dd9b9"}}},
-        {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.2"}}},
+        {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.3"}}},
         {medici,        {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
 
         % for Erlang 17 uncomment line below (using legacy branch of bson)
@@ -27,9 +27,9 @@
         %{riakc,         {git, "https://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
 
         {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {ref, "2941b5f"}}},
-        {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {ref, "c7dfb064811"}}},
+        {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {ref, "3.4.0"}}},
         {erlmc,         {git, "https://github.com/layerhq/erlmc.git",                     {ref, "c5280da"}}},
-        {mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.1"}}},
+        {mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.3"}}},
         {poolboy,       {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.1"}}},
         {uuid,          {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.0"}}},
         {redo,          {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
