--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        otp: ['22.3.4.21', '23.0.2', '24.1.3', '25.1.1']
+        otp: ['23.0.2', '24.1.3', '25.1.1']
         rebar3: ['3.20.0']
     steps:
     - uses: actions/checkout@v2
