Drop support for mongodb since the last commit for that lib is from 2015

--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,6 @@
         {uuid,          {git, "https://github.com/avtobiff/erlang-uuid.git",              {branch, "master"}}},
 
         %% Database interfaces
-        {mongodb,       {git, "https://github.com/comtihon/mongodb-erlang",               {branch, "master"}}},
         {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {tag, "v0.1.7"}}},
         {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {tag, "4.2.0"}}},
         {erlmc,         {git, "https://github.com/ErlyORM/erlmc.git",                     {ref, "c5280da"}}},
@@ -32,7 +31,7 @@
 
 %% == Dialyzer ==
 {dialyzer, [
-    {warnings, [error_handling, race_conditions, unmatched_returns, underspecs]},
+    {warnings, [error_handling, unmatched_returns, underspecs]},
     {get_warnings, false},
     {plt_apps, top_level_deps}, % top_level_deps | all_deps
     {plt_extra_apps, []},
