Fix info in README and indent the rebar-file

--- a/rebar.config
+++ b/rebar.config
@@ -1,15 +1,15 @@
-%-*-Erlang-*-
-% vim: ts=8 sw=8 ft=erlang
+%%-*-Erlang-*-
+%% vim: ts=8 sw=8 ft=erlang
 
 {erl_opts, [
-    debug_info,
-    warn_unused_vars,
-    warn_unused_import,
-    warn_exported_vars,
-    {parse_transform, cut},
-    {parse_transform, do},
-    {parse_transform, import_as}
-]}.
+            debug_info,
+            warn_unused_vars,
+            warn_unused_import,
+            warn_exported_vars,
+            {parse_transform, cut},
+            {parse_transform, do},
+            {parse_transform, import_as}
+           ]}.
 
 {deps, [
         {erlando,       {git, "https://github.com/burbas/erlando.git",                    {branch, "master"}}},
@@ -27,36 +27,36 @@
         {redo,          {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
         {ets_cache,     {git, "https://github.com/cuongth/ets_cache.git",                 {ref, "c7a17204cd"}}}
 
-  ]}.
+       ]}.
 
 %% == Dialyzer ==
 {dialyzer, [
-    {warnings, [error_handling, unmatched_returns, underspecs]},
-    {get_warnings, false},
-    {plt_apps, top_level_deps}, % top_level_deps | all_deps
-    {plt_extra_apps, []},
-    {plt_location, local}, % local | "/my/file/name"
-    {plt_prefix, "boss_db"},
-    {base_plt_apps, [stdlib, kernel, erts]},
-    {base_plt_location, global}, % global | "/my/file/name"
-    {base_plt_prefix, "rebar3"}
-]}.
+            {warnings, [error_handling, unmatched_returns, underspecs]},
+            {get_warnings, false},
+            {plt_apps, top_level_deps}, % top_level_deps | all_deps
+            {plt_extra_apps, []},
+            {plt_location, local}, % local | "/my/file/name"
+            {plt_prefix, "boss_db"},
+            {base_plt_apps, [stdlib, kernel, erts]},
+            {base_plt_location, global}, % global | "/my/file/name"
+            {base_plt_prefix, "rebar3"}
+           ]}.
 
 {cover_enabled, true}.
 
 {plugins, []}.
 
 {profiles,
-    [{test, [
-        {deps, [
-            {proper,        {git, "https://github.com/manopapad/proper.git",                  {ref, "v1.3"}}},
-            {boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
-        ]}
-    ]},
-    {boss_test, [
-         {erl_opts, [{d, boss_test}]}
-    ]},
-    {prod, [
-        %{erl_opts, [warnings_as_errors]}
-    ]}
-]}.
+ [{test, [
+          {deps, [
+                  {proper,        {git, "https://github.com/manopapad/proper.git",                  {ref, "v1.3"}}},
+                  {boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
+                 ]}
+         ]},
+  {boss_test, [
+               {erl_opts, [{d, boss_test}]}
+              ]},
+  {prod, [
+          {erl_opts, [warnings_as_errors]}
+         ]}
+ ]}.
